--- a/css/index.css
+++ b/css/index.css
@@ -20,18 +20,7 @@ a, ul, li, input{
    
  }
  
- .clearfix:before, .clearfix:after {
-  content: "";
-  display: table;
- }
 
-.clearfix:after {
-   clear: both;
-}
-
-.clearfix:before {
-  *zoom: 1;
-}
 
 body {
   background-color: white;
@@ -43,6 +32,7 @@ body {
     max-width: 1440px;
     width: 360px;
     overflow: hidden;
+    display: flex;
 }
 
 /* Navbar desktop
