--- a/css/index.css
+++ b/css/index.css
@@ -31,7 +31,8 @@ body {
 #container{
     max-width: 1440px;
     width: 360px;
-   display: flex;
+    height: auto;
+    overflow: hidden;
   
 }
 
