--- a/css/index.css
+++ b/css/index.css
@@ -66,7 +66,7 @@ body {
   position: absolute;
   top: 40px;
   right: 55px;
-  z-index: 99;
+  z-index: 100;
 }
 .logoContainer {
   display: block;
@@ -75,11 +75,11 @@ body {
   
 }
 .logotipo {
-  position: relative;
+  position: absolute;
   top: 5px;
   left: 20px;
-  width: 151px;
-  height: 205px;
+  width: 92px;
+  height: 125px;
 }
 .line {
   display: block;
