--- a/css/contactenos.css
+++ b/css/contactenos.css
@@ -8,6 +8,7 @@
   box-sizing: border-box; 
   padding: 0; 
 }
+
 a, ul, li, input{
 	text-decoration: none;
 	list-style: none;
@@ -16,7 +17,7 @@ a, ul, li, input{
  }
 
  h2{
-   font-family: 'Nunito' sans-serif;
+   font-family: Arial,  sans-serif;
    font-size: 15px;
    text-align: center;
  }
@@ -139,7 +140,7 @@ input[type="checkbox"]:checked ~ .hamburger .line3 {
 
 
 .guia{
-  font-family: 'Nunito', sans-serif;
+  font-family: Arial, sans-serif;
   font-size: 15px;
   height: 50px;
 	width: 100%;
@@ -158,7 +159,7 @@ input[type="checkbox"]:checked ~ .hamburger .line3 {
 /******Título*********/
 h1{
     font-size:  30px;
-    font-family: 'Nunito' sans-serif;
+    font-family: Arial, sans-serif;
     text-align: center;
 
 }
@@ -166,7 +167,7 @@ h1{
 .redes{
     display: flex;
     flex-direction: column;
-    justify-content: content;
+    justify-content: center;
     align-items: center;
 }
 .azul .facebook{
@@ -208,7 +209,7 @@ footer{
   }
 
   .pie-pagina p{
-    font-family: 'Nunito','Arial' sans-serif;
+    font-family:  Arial, sans-serif;
     font-size: 15px;
     text-align: center;
     line-height: 30px;
@@ -229,7 +230,7 @@ footer{
   }
   
   .derechos p{
-    font-family: 'Nunito','Arial' sans-serif;
+    font-family: Arial, sans-serif;
     font-size: 0.5em;
     text-align: center;
     line-height: 30px;
