--- a/css/ideas.css
+++ b/css/ideas.css
@@ -146,7 +146,7 @@ a, ul, li, input{
 /***********galeria**************/
 
 .galeria{
-	font-family: 'Nunito' sans-serif;
+	font-family: 'Nunito', sans-serif;
 }
 .galeria h1{
 	text-align: center;
@@ -155,7 +155,7 @@ a, ul, li, input{
 
 }
 .galeria p{
-   font-family: 'Nunito' sans-serif;
+   font-family: 'Nunito', sans-serif;
    font-size: 15px;
    text-align: center;
    top: 50%;
@@ -205,7 +205,7 @@ a, ul, li, input{
 }
 .overlay h2{
   color: #000;
-  font-family: 'Nunito' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 2em;
 	font-weight: 400;
 	margin-bottom: 20px;
@@ -246,7 +246,7 @@ footer{
   }
   
   .redes h2{
-	font-family: 'Nunito','Arial' sans-serif;
+	font-family: 'Nunito', sans-serif;
 	font-size: 25px;
 	padding: 20px;
 	display: flex;
@@ -259,7 +259,7 @@ footer{
 	margin-left: -20px;
   font-size: 35px;
   display: flex;
-  text-decoration: row;;
+  flex-direction: row;
   justify-content: center;
 
 	
@@ -269,7 +269,7 @@ footer{
 
   
   .pie-pagina p{
-	font-family: 'Nunito','Arial' sans-serif;
+	font-family: 'Nunito', sans-serif;
 	font-size: 15px;
 	text-align: center;
 	line-height: 30px;
@@ -289,7 +289,7 @@ footer{
   }
   
   .derechos p{
-	font-family: 'Nunito','Arial' sans-serif;
+	font-family: 'Nunito', sans-serif;
 	font-size: 0.5em;
 	text-align: center;
 	line-height: 30px;
