--- a/css/nosotros.css
+++ b/css/nosotros.css
@@ -23,7 +23,7 @@ Estilos del header
  }
 
  html,body{
-	font-family: 'Nunito' sans-serif;
+	font-family: 'Nunito', sans-serif;
 	
  }
 
@@ -158,7 +158,7 @@ Estilos del header
 .nosotros h1{
    
     font-size:  30px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     line-height: 30px;
     
@@ -166,7 +166,7 @@ Estilos del header
 .nosotros p{
     padding: 5px;
     font-size: 13px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     background-color: beige;
      
@@ -180,7 +180,7 @@ Estilos del header
 .entrevistas h1{
     padding: 30px;
     font-size:  30px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     line-height: 30px;
 }
@@ -194,7 +194,7 @@ Estilos del header
 .empleados h1{
     padding: 30px;
     font-size:  30px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     line-height: 30px;
 }
@@ -214,7 +214,7 @@ Estilos del header
 .empleados .personal h2{
     
     font-size:  12px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     line-height: 20px;
     padding-bottom: 10px;
@@ -224,7 +224,7 @@ Estilos del header
 .empleados .personal p{
     padding: 5px;
     font-size:  12px;
-    font-family: 'Nunito' sans-serif;
+    font-family: 'Nunito', sans-serif;
     text-align: center;
     line-height: 20px;
 }
@@ -248,7 +248,7 @@ footer{
   }
   
   .redes h2{
-    font-family: 'Nunito','Arial' sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 25px;
     padding: 20px;
     display: flex;
@@ -266,7 +266,7 @@ footer{
   }
   
   .pie-pagina p{
-    font-family: 'Nunito','Arial' sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 15px;
     text-align: center;
     line-height: 30px;
@@ -286,7 +286,7 @@ footer{
   }
   
   .derechos p{
-    font-family: 'Nunito','Arial' sans-serif;
+    font-family: 'Nunito', sans-serif;
     font-size: 0.5em;
     text-align: center;
     line-height: 30px;
