--- a/css/index.css
+++ b/css/index.css
@@ -16,7 +16,7 @@ a, ul, li, input{
  }
 
  h2{
-   font-family: 'Nunito' sans-serif;
+   font-family: 'Nunito', sans-serif;
    
  }
  
@@ -155,7 +155,7 @@ input[type="checkbox"]:checked ~ .hamburger .line3 {
   background-color: #627B23;
   margin-left: 190px;
   margin-top: 105px;
-  font-family: 'Nunito' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 10px;
   padding: 10px 5px;
   border-radius: 30px;
@@ -186,7 +186,7 @@ input[type="checkbox"]:checked ~ .hamburger .line3 {
 
 #divisiones .categoria h2{
      text-align: center;
-      font-family: 'Nunito' sans-serif;
+      font-family: 'Nunito', sans-serif;
       font-size: 1.2em;
       margin-left: 40px;
       
@@ -232,7 +232,7 @@ input[type="checkbox"]:checked ~ .hamburger .line3 {
      justify-content: center;
 }
 .temporada h2{
-      font-family: 'Nunito' sans-serif;
+      font-family: 'Nunito', sans-serif;
       text-align: center;
       font-size: 1.2em;
       margin-right: 50px;
@@ -298,7 +298,7 @@ form{
 
 form h1 {
 	color: #000;
-  font-family: 'Nunito' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 1.5em;
 	font-weight: 400;
 	margin-bottom: 20px;
@@ -310,7 +310,7 @@ form h3{
 	color: #627B23;
   font-size: 12px;
 	right: 20px;
-   font-family: 'Nunito' sans-serif;
+   font-family: 'Nunito', sans-serif;
    
 }
 
@@ -364,7 +364,7 @@ footer{
 }
 
 .redes h2{
-  font-family: 'Nunito','Arial' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 25px;
   padding: 20px;
   display: flex;
@@ -382,7 +382,7 @@ i {
 
 
 .pie-pagina p{
-  font-family: 'Nunito','Arial' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 15px;
   text-align: center;
   line-height: 30px;
@@ -402,7 +402,7 @@ i {
 }
 
 .derechos p{
-  font-family: 'Nunito','Arial' sans-serif;
+  font-family: 'Nunito', sans-serif;
   font-size: 0.5em;
   text-align: center;
   line-height: 30px;
